# Grant_RSF

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
tests/: test_project.py
