[tool.poetry]
name = "grant-rsf"
version = "0.1.0"
description = ""
authors = ["AliRN <ali_ramazanov_2000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
cookiecutter = "^2.6.0"
matplotlib = "^3.8.2"



[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
